# master-thesis

./: .\Viewer\structure.yml  .fuse_hidden0000028b00000002  .fuse_hidden000002e200000042  .fuse_hidden000018d800000041  CMakeCache.txt  CMakeLists.txt  Makefile  affine_2d  affine_2d.cpp  affine_2d_iteration.cpp  affine_2d_old.cpp  affine_3d.cpp  alignimage.py  capture_ZED.m  centers2.txt  cmake_install.cmake  command  gatherpoints  gatherpoints.cpp  gatherpoints1  gatherpoints1.cpp  git-hub  ground_truth.txt  img1data  img2data  kdtreetrial.cpp  main  main (copy).cpp  main.cpp  main1.cpp  main222.cpp  main444  main444.cpp  multiview  multiview.cpp  new3D  new3D.cpp  newversion_twoviews  newversion_twoviews.cpp  opencv  (+24 more)
Eigen/: CMakeLists.txt
Masterthesis/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  new3D  new3D.cpp
OpenDLV/: CMakeLists.txt  alpine.amd64
Viewer/: structure.yml
gather/: 1.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  85 (copy).csv  85.csv  86.csv  87.csv  88.csv  89.csv  90.csv  91.csv  92.csv  93.csv  94.csv  95.csv  96.csv  97.csv  98.csv  99.csv
images/: 1.csv  14.csv  2.csv  3.csv  4.csv  5.csv  6.csv  8.csv  9.csv
kdtree/: 1.csv  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kdtree.cpp  kdtree.h  main.cpp  pointcloud.h
result/: 0.csv  0_stereo.csv  0_triangle.csv  10.csv  1513418735.872856.csv  1513418736.104414.csv  1513418736.317259.csv  1513418736.532264.csv  1513418736.741893.csv  1513418736.958210.csv  1513418737.196003.csv  1513418737.408852.csv  1513418737.619855.csv  1513418737.833137.csv  1513418738.047029.csv  1513418738.252481.csv  1513418738.480031.csv  1513418738.909273.csv  1513418739.150719.csv  1513418739.349684.csv  1513418739.591856.csv  1513418739.790907.csv  1513418740.003517.csv  1513418740.213241.csv  1513418740.428629.csv  1513418740.641667.csv  1513418740.874858.csv  1513418741.104598.csv  1513418741.303088.csv  1513418741.508685.csv  1513418741.749016.csv  1513418741.987562.csv  1513418742.169853.csv  1513418742.388121.csv  1513418742.599960.csv  1513418742.818569.csv  1513418743.477059.csv  1513418743.689698.csv  1513418743.908415.csv  1513418744.114132.csv  (+353 more)
tmp/: new3D  (+22 more)
(+3016 files in other folders)
